k8s/microservices-with-otel.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: nedimitri
  name: zerofiltre-blog-frontend-nedimitri
spec:
  minReadySeconds: 30
  progressDeadlineSeconds: 120
  replicas: 1
  selector:
    matchLabels:
      app: zerofiltre-blog-frontend-nedimitri
  template:
    metadata:
      labels:
        app: zerofiltre-blog-frontend-nedimitri
    spec:
      containers:
        - name: zerofiltre-blog-frontend-nedimitri
          image: nedimitri/zerofiltretech-blog-front:1_latest
          imagePullPolicy: Always
          ports:
            - name: http-port
              containerPort: 4000
              protocol: TCP
          resources:
            requests:
              cpu: 0.1
              memory: '50Mi'
            limits:
              cpu: 0.5
              memory: 512Mi
          livenessProbe:
            tcpSocket:
              port: 4000
            initialDelaySeconds: 20
            periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  namespace: nedimitri
  name: zerofiltre-blog-frontend-nedimitri
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: http-port
  selector:
    app: zerofiltre-blog-frontend-nedimitri
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: nedimitri
  name: zerofiltre-blog-frontend-nedimitri
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: nedimitri-blog.zerofiltre.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zerofiltre-blog-frontend-nedimitri
                port:
                  number: 80
  tls:
    - hosts:
        - nedimitri-blog.zerofiltre.tech
      secretName: zerofiltre-blog-frontend-nedimitri-cert
